# mps

./: .dockerignore  .editorconfig  .gitignore  .ignore  .taplo.toml  Cargo.toml  README.md  docker-compose.yml  justfile
.cargo/: config.toml
.sqlx/: query-2014cb57a1f2ff50195fba0c3d22cc1e0f0065b0b22a2852e2be24cbe1a27ca8.json  query-7fe73b5ef4f71ac27bafabe9d52f1af94544583aa454e011816ffe13fae9654e.json  query-aaebeb0a6549103b201bfb64b50a36acb4a28e108829f63c578b017abb80816b.json
config/: config.toml.sample
crates/mps_cli/: Cargo.toml  README.md
crates/mps_cli/src/: lib.rs  main.rs
crates/mps_cloud/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_cloud/proto/: ecs.proto
crates/mps_cloud/src/: lib.rs  main.rs
crates/mps_config/src/: lib.rs
crates/mps_container/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_container/proto/: docker.proto
crates/mps_container/src/: lib.rs  main.rs
crates/mps_im/: Cargo.toml  README.md  config.toml.sample
crates/mps_im/src/: lib.rs
crates/mps_log/: Cargo.toml
crates/mps_log/src/: lib.rs
crates/mps_orchestrator/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_orchestrator/proto/: kubernetes.proto
crates/mps_orchestrator/src/: lib.rs  main.rs
crates/mps_orchestrator/templates/: deployment.yml  ingress.yml  namespace.yml  service.yml
crates/mps_project/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_project/.sqlx/: query-1685b02bcade309b4379298f7ee4cd884f267d2a516f041cb4dbc45cdb17eb5f.json  query-29356ceade5be500173e8655241a35973a4333a3d19ec0b9e3dfabbd0bc97b8c.json  query-5be350b106122c370d514a5dd0c91412874e8b28324c9a44eabf1bbd5fd1bc39.json  query-a4d08c888692c7d8d40bd3033e9dd9434092c9c171dea43c33083e3f30c2de33.json  query-b034dbeaaf14022836ee759ec22b8ba8e8b62a4d9939bd9c63570ee17117080b.json  query-ea765d06a5268fab0ea3c3e36521843a5ffbc04fd96db29321b8047220645f36.json
crates/mps_project/migrations/: 20240218192135_init.up.sql  20240218201044_application_init.up.sql  20240218201044_service_init.down.sql  20240218201044_service_init.up.sql  20240223170009_environment_init.down.sql  20240223170009_environment_init.up.sql  20240224224659_application.up.sql
crates/mps_project/proto/: application.proto  environment.proto  project.proto
crates/mps_project/src/: application_proto.rs  cli.rs  config.rs  error.rs  kafka.rs  lib.rs  main.rs  project_proto.rs  repository.rs
crates/mps_project/src/adapter/incoming/: mod.rs
crates/mps_project/src/adapter/incoming/grpc/: client.rs  error.rs  mod.rs  server.rs
crates/mps_project/src/adapter/incoming/grpc/server/: application.rs  environment.rs  mod.rs  project.rs
crates/mps_project/src/adapter/outgoing/: mod.rs
crates/mps_project/src/adapter/outgoing/repository/: application.rs  application_persistence.rs  config.rs  environment.rs  environment_persistence.rs  error.rs  mod.rs  project.rs  project_persistence.rs
crates/mps_project/src/application/: error.rs  mod.rs
crates/mps_project/src/application/port/incoming/: mod.rs
crates/mps_project/src/application/port/outgoing/: mod.rs
crates/mps_project/src/application/service/: mod.rs
crates/mps_project/src/cli/: common.rs  error.rs  grpc.rs  migrations.rs  mod.rs  seed.rs  version.rs
crates/mps_project/src/domain/: application.rs  environment.rs  mod.rs  project.rs  service.rs
crates/mps_project/src/grpc/: mod.rs  server.rs
crates/mps_project/src/repository/: application.rs  mod.rs  project.rs
crates/mps_render/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_render/proto/: render.proto
crates/mps_render/src/: lib.rs  main.rs
crates/mps_scm/: Cargo.toml  README.md  build.rs  config.toml.sample
crates/mps_scm/migrations/: 20240225010109_repositories.down.sql  20240225010109_repositories.up.sql
crates/mps_scm/proto/: scm.proto
crates/mps_scm/src/: cli.rs  config.rs  ecr.rs  error.rs  github.rs  lib.rs  local.rs  main.rs
crates/mps_scm/src/adapter/incoming/grpc/: mod.rs
crates/mps_scm/src/adapter/incoming/grpc/server/: config.rs  git_repository.rs  mod.rs
crates/mps_scm/src/adapter/outgoing/: mod.rs
crates/mps_scm/src/adapter/outgoing/provider/: github.rs  local.rs
crates/mps_scm/src/adapter/outgoing/repository/: error.rs  git_repository.rs  git_repository_persistence.rs  mod.rs
crates/mps_scm/src/application/: error.rs  mod.rs
crates/mps_scm/src/application/port/: mod.rs
crates/mps_scm/src/application/port/outgoing/: mod.rs
crates/mps_scm/src/application/service/: mod.rs
crates/mps_scm/src/cli/: common.rs  consts.rs  error.rs  grpc.rs  migrations.rs  mod.rs  seed.rs  version.rs
crates/mps_scm/src/domain/: github.rs  mod.rs
crates/mps_scm/src/grpc/: client.rs  mod.rs  scm.rs  server.rs
crates/mps_scm/src/provider/: github.rs  local.rs  mod.rs
docker/db/: init.sql
lib/mps_config/: Cargo.toml  README.md
lib/mps_config/src/: lib.rs
lib/mps_grpc/: Cargo.toml
lib/mps_log/src/: lib.rs
mps/: Cargo.toml
mps/src/: lib.rs
mps_application/: Cargo.toml
mps_application/src/: error.rs  lib.rs
mps_application/src/service/: mod.rs
mps_cli/: Cargo.toml
mps_domain/: Cargo.toml
mps_domain/src/: application.rs  error.rs  lib.rs  project.rs  user.rs
mps_grpc/: Cargo.toml
mps_log/: README.md
mps_persistence/: Cargo.toml
mps_scm/: Cargo.toml
mps_scm/src/: lib.rs
mps_scm/src/git/: mod.rs
