[workspace]
resolver = "2"
members  = ["crates/*"]

[workspace.package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>", "MPS contributors"]
categories   = ["development-tools"]
description  = "Microbe platform system"
edition      = "2021"
homepage     = "https://microbio.rs"
keywords     = [""]
license      = "MIT"
repository   = "https://github.com/murilobsd/mps"
rust-version = "1.76"

[workspace.lints.rust]

[workspace.lints.clippy]
all           = { level = "warn" }
dbg_macro     = "warn"
todo          = "warn"
unimplemented = "warn"

[workspace.dependencies]
jemallocator       = "0.5.4"
tracing-subscriber = "0.3.18"
tracing            = "0.1.40"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
