[workspace]
resolver = "2"
members  = ["mps", "mps_application", "mps_config", "mps_domain", "mps_log", "mps_cli", "mps_grpc", "mps_persistence"]

[workspace.package]
authors      = ["Murilo Ijanc' <mbsd@m0x.ru>", "MPS contributors"]
categories   = ["development-tools"]
description  = "Microbe platform system"
edition      = "2021"
homepage     = "https://microbio.rs"
keywords     = [""]
license      = "MIT"
repository   = "https://github.com/murilobsd/mps"
rust-version = "1.76"

[workspace.lints.rust]

[workspace.lints.clippy]
all           = { level = "warn" }
dbg_macro     = "warn"
todo          = "warn"
unimplemented = "warn"

[workspace.dependencies]
async-trait       = "0.1.77"
aws-config        = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-ecr       = "1.13.0"
base64            = "0.21.7"
chrono            = "0.4.34"
clap              = "4.5.0"
color-eyre        = "0.6.2"
colored           = "2.1.0"
derive-new        = "0.6.0"
derive_builder    = "0.20.0"
fake              = "2.9.2"
futures-util      = "0.3.30"
git2              = "0.18.2"
mockall           = "0.12.1"
mockito           = "1.2.0"
num-derive        = "0.4.2"
num-traits        = "0.2.18"
rdkafka           = "0.36.2"
regex             = "1.10.3"
serde             = "1.0.196"
serde_json        = "1.0.113"
serde_yaml        = "0.9.31"
strum             = { version = "0.26.1", features = ["derive"] }
tempfile          = "3.10.0"
tera              = "1.19.1"
thiserror         = "1.0.56"
tikv-jemallocator = "0.5"
tokio             = "1.36.0"
tonic             = "0.11.0"
tracing           = "0.1.40"
url               = "2.5.0"
uuid              = "1.7.0"
vergen            = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
pretty_assertions = "1.4.0"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
