[package]
name = "mps"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mps_application = { version = "0.1.0", path = "../mps_application" }
mps_config = { version = "0.1.0", path = "../mps_config" }
mps_domain = { version = "0.1.0", path = "../mps_domain" }
mps_grpc = { version = "0.1.0", path = "../mps_grpc" }
mps_log = { version = "0.1.0", path = "../mps_log" }
mps_persistence = { version = "0.1.0", path = "../mps_persistence" }
mps_scm = { version = "0.1.0", path = "../mps_scm" }

[lints]
workspace = true
