[package]
name                   = "mps_cli"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "mps"
path = "src/main.rs"
test = false

[dependencies]
mps_log = { version = "0.1.0", path = "../mps_log" }

tokio                = { workspace = true, features = ["rt-multi-thread", "macros"] }
color-eyre.workspace = true
tracing.workspace    = true
mps_persistence = { version = "0.1.0", path = "../mps_persistence" }
mps_grpc = { version = "0.1.0", path = "../mps_grpc" }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
workspace = true
