[package]
name = "mps_domain"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive-new = "0.6.0"
num-derive = "0.4.2"
num-traits.workspace = true
strum.workspace = true
uuid.workspace = true

[lints]
workspace = true
