[package]
name                   = "mps_cli"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "mps"
path = "src/main.rs"
test = false

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }
