[package]
name                   = "mps_cli"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "mps"
path = "src/main.rs"
test = false

[dependencies]
mps_scm              = { version = "0.1.0", path = "../mps_scm", features = ["grpc_client"], default-features = false }
tokio                = { workspace = true, features = ["rt-multi-thread", "macros"] }
color-eyre.workspace = true
mps_log              = { version = "0.1.0", path = "../mps_log" }
tracing.workspace    = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }
