[package]
name                   = "mps_cloud"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
mps_config = { version = "0.1.0", path = "../mps_config" }
mps_log    = { version = "0.1.0", path = "../mps_log" }

async-trait.workspace = true
aws-config.workspace = true
aws-sdk-ecr.workspace = true
chrono = { workspace = true, features = ["serde"] }
color-eyre.workspace = true
prost = "0.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.7.3", features = [
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
tonic-build = "0.11.0"
