[package]
name                   = "mps_container"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
aws-config.workspace   = true
aws-sdk-ecr.workspace  = true
base64.workspace       = true
bollard                = { version = "0.15.0", features = ["buildkit", "chrono"] }
color-eyre.workspace   = true
dockerfile-parser      = "0.8.0"
flate2                 = "1.0.28"
futures-util.workspace = true
serde                  = { workspace = true, features = ["derive"] }
serde_json.workspace   = true
tar                    = "0.4.40"
thiserror.workspace    = true
tokio                  = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace      = true
tonic.workspace = true
prost = "0.12.3"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
tonic-build = "0.11.0"
