[package]
name                   = "mps_log"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
clia-local-offset = "0.1"
time = { version = "0.3.34", features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
  "std",
  "fmt",
  "env-filter",
  "tracing-log",
  "time",
  "local-time",
  "json",
] }

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
