[package]
name                   = "mps_orchestrator"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio.workspace = { features = ["time"] }

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
