[package]
name                   = "mps_orchestrator"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
color-eyre           = "0.6.2"
jemallocator.workspace = true
k8s-openapi          = { version = "0.21.0", features = ["latest"] }
kube                 = { version = "0.88.1", features = ["runtime", "derive"] }
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tera.workspace       = true
thiserror.workspace  = true
tokio                = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing.workspace    = true

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
