[package]
name                   = "mps_project"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
mps_config = { version = "0.1.0", path = "../mps_config" }
mps_log    = { version = "0.1.0", path = "../mps_log" }

async-trait.workspace = true
clap.workspace = true
chrono = { workspace = true, features = ["serde"] }
color-eyre.workspace = true
colored.workspace = true
fake = { workspace = true, features = ["derive", "uuid", "chrono"] }
jemallocator.workspace = true
prost = "0.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.7.3", features = [
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }

[lints]
workspace = true

[lib]
doctest = false

[features]
default     = ["grpc_client", "grpc_server"]
grpc_server = []
grpc_client = []

[dev-dependencies]
mockall.workspace  = true
mockito.workspace  = true
tempfile.workspace = true

[build-dependencies]
tonic-build = "0.11.0"
