[package]
name                   = "mps_project"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
mps_config = { version = "0.1.0", path = "../mps_config" }
mps_log    = { version = "0.1.0", path = "../mps_log" }
# mps_scm    = { version = "0.1.0", path = "../mps_scm", features = ["grpc_client"] }
# mps_cloud = { version = "0.1.0", path = "../mps_cloud" }
# mps_container = { version = "0.1.0", path = "../mps_container" }
# mps_orchestrator = { version = "0.1.0", path = "../mps_orchestrator" }
# mps_render = { version = "0.1.0", path = "../mps_render" }

async-trait.workspace = true
clap.workspace = true
chrono = { workspace = true, features = ["serde"] }
color-eyre.workspace = true
colored.workspace = true
fake = { workspace = true, features = ["derive", "uuid", "chrono"] }
prost = "0.12.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rdkafka.workspace = true
sqlx = { version = "0.7.3", features = [
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
rand = "0.8.5"
derive-new.workspace = true
strum.workspace = true
num-derive.workspace = true
num-traits.workspace = true

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.tikv-jemallocator]
workspace = true

[lints]
workspace = true

[lib]
doctest = false

[features]
default     = ["grpc_client", "grpc_server"]
grpc_server = []
grpc_client = []

[dev-dependencies]
mockall.workspace  = true
mockito.workspace  = true
tempfile.workspace = true

[build-dependencies]
vergen.workspace = true
tonic-build      = "0.11.0"
