[package]
name                   = "mps_render"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
aws-config.workspace   = true
aws-sdk-ecr.workspace  = true
color-eyre.workspace   = true
jemallocator.workspace = true
serde                  = { workspace = true, features = ["derive"] }
serde_json.workspace   = true
tera.workspace         = true
thiserror.workspace    = true
tokio                  = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace      = true

[lints]
workspace = true

[lib]
doctest = false

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
