[package]
name                   = "mps_scm"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "grpc_server"
path = "src/bin/grpc_server.rs"

[dependencies]
color-eyre.workspace = true
git2.workspace       = true
prost                = "0.12.3"
reqwest              = { version = "0.11.24", features = ["json"] }
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace  = true
tonic.workspace      = true
tracing.workspace    = true
tokio                = { workspace = true, features = ["rt-multi-thread", "macros"] }
mps_config           = { version = "0.1.0", path = "../mps_config" }

[lints]
workspace = true

[lib]
doctest = false

[features]
default     = ["grpc_server"]
grpc_server = []
grpc_client = []

[dev-dependencies]
mockall.workspace  = true
mockito.workspace  = true
tempfile.workspace = true

[build-dependencies]
tonic-build = "0.11.0"
